--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^24.0.12",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.11",
-		"typescript": "^5.0.0",
+		"typescript": "^5.8.3",
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
