--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.11",
-		"daisyui": "^5.0.46"
+		"daisyui": "^5.0.46",
+		"dexie": "^4.0.11"
 	}
 }
