--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"vite": "^7.0.5"
 	},
 	"dependencies": {
+		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/vite": "^4.1.11",
 		"daisyui": "^5.0.46",
 		"dexie": "^4.0.11"
